--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Let Go & Bloom</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <title>Letting Go Ritual</title>
 </head>
 <body>
-    <header>
-        <h1>Let Go & Bloom</h1>
-        <p>A sacred space to release, reset, and return to yourself.</p>
-        <a href="ritual.html">Begin Ritual</a> | <a href="library.html">Brilliance Library</a> | <a href="about.html">About</a>
-    </header>
+  <h1>Letting Go Ritual</h1>
+  <p>A sacred space to release, reset, and reclaim your brilliance.</p>
+
+  <a href="letting_go_ritual.html">🌀 Begin Ritual</a> |
+  <a href="brilliance_library.html">📚 Brilliance Library</a> |
+  <a href="about.html">✨ About</a>
 </body>
 </html>
