--- a/letting_go_ritual.html
+++ b/letting_go_ritual.html
@@ -114,7 +114,7 @@ index.html
         </ul>
         <h3>💫 Affirmation</h3>
         <p><em>I am free from ${emotion.toLowerCase()}. I choose peace, power, and self-love.</em></p>
-        <img src="A_2D_digital_illustration_showcases_an_emotion_rel.png" alt="Emotion Illustration" style="width:100%;margin-top:20px;">
+       <img src="images/emotion_art.png" alt="Emotion Illustration" ...>
       `;
       document.getElementById("message").innerHTML = content;
     });
