--- a/letting_go_ritual.html
+++ b/letting_go_ritual.html
@@ -43,8 +43,8 @@ index.html
 </head>
 <body>
   <h2>🌿 Letting Go Ritual</h2>
-  <p>Select the emotion you'd like to release:</p>
-  <select id="emotionSelector">
+<label for="emotionSelector">Select the emotion you'd like to release:</label>
+<select id="emotionSelector" name="emotionSelector">
     <option value="">-- Choose an emotion --</option>
     <option>Fear</option>
     <option>Shame</option>
