--- a/letting_go_ritual.html
+++ b/letting_go_ritual.html
@@ -115,7 +115,9 @@ index.html
         <p><em>I am free from ${emotion.toLowerCase()}. I choose peace, power, and self-love.</em></p>
        <img src="images/emotion_art.png" alt="Emotion Illustration" ...>
       `;
-      document.getElementById("message").innerHTML = content;
+document.getElementById("message").innerHTML = content;
+document.getElementById("emotionSelector").value = "";
+document.getElementById("releaseText").value = "";
     });
   </script>
 </body>
