--- a/letting_go_ritual.html
+++ b/letting_go_ritual.html
@@ -33,6 +33,12 @@ index.html
       background-color: #444;
     }
     #message {
+  opacity: 0;
+  transition: opacity 0.6s ease-in-out;
+}
+#message.visible {
+  opacity: 1;
+}
       margin-top: 30px;
       padding: 20px;
       background-color: #fff;
