--- a/letting_go_ritual.html
+++ b/letting_go_ritual.html
@@ -118,7 +118,7 @@ index.html
         </ul>
         <h3>💫 Affirmation</h3>
         <p><em>I am free from ${emotion.toLowerCase()}. I choose peace, power, and self-love.</em></p>
-       <img src="images/emotion_art.png" alt="Emotion Illustration" ...>
+ <img src="images/emotion_art.png" alt="Emotion Illustration" style="width:100%;margin-top:20px;">
       `;
 document.getElementById("message").innerHTML = content;
 document.getElementById("emotionSelector").value = "";
