--- a/letting_go_ritual.html
+++ b/letting_go_ritual.html
@@ -99,31 +99,33 @@ index.html
   <div id="message"></div>
   <script>
     document.getElementById("releaseButton").addEventListener("click", function () {
-      const emotion = document.getElementById("emotionSelector").value;
-      const journal = document.getElementById("releaseText").value;
-      if (!emotion) {
-        alert("Please select an emotion to release.");
-        return;
-      }
-      let content = `
-        <h2>🖤 Emotion: ${emotion}</h2>
-        <h3>🌬️ Release Reflection</h3>
-        <p>You chose to release: <strong>${emotion}</strong>.</p>
-        ${journal ? `<p>You wrote: “<em>${journal}</em>”</p>` : ''}
-        <h3>🌿 Letting Go Ritual</h3>
-        <ul>
-          <li>Find stillness and take 3 deep breaths.</li>
-          <li>Say: “I release ${emotion.toLowerCase()} now. It no longer belongs to me.”</li>
-          <li>Place your hand on your heart and feel the release.</li>
-        </ul>
-        <h3>💫 Affirmation</h3>
-        <p><em>I am free from ${emotion.toLowerCase()}. I choose peace, power, and self-love.</em></p>
- <img src="images/emotion_art.png" alt="Emotion Illustration" style="width:100%;margin-top:20px;">
-      `;
-document.getElementById("message").innerHTML = content;
-document.getElementById("emotionSelector").value = "";
-document.getElementById("releaseText").value = "";
-    });
-  </script>
-</body>
-</html>
+  const emotion = document.getElementById("emotionSelector").value;
+  const journal = document.getElementById("releaseText").value;
+  if (!emotion) {
+    alert("Please select an emotion to release.");
+    return;
+  }
+
+  let content = `
+    <h2>🖤 Emotion: ${emotion}</h2>
+    <h3>🌬️ Release Reflection</h3>
+    <p>You chose to release: <strong>${emotion}</strong>.</p>
+    ${journal ? `<p>You wrote: “<em>${journal}</em>”</p>` : ''}
+    <h3>🌿 Letting Go Ritual</h3>
+    <ul>
+      <li>Find stillness and take 3 deep breaths.</li>
+      <li>Say: “I release ${emotion.toLowerCase()} now. It no longer belongs to me.”</li>
+      <li>Place your hand on your heart and feel the release.</li>
+    </ul>
+    <h3>💫 Affirmation</h3>
+    <p><em>I am free from ${emotion.toLowerCase()}. I choose peace, power, and self-love.</em></p>
+    <img src="images/emotion_art.png" alt="Emotion Illustration" style="width:100%;margin-top:20px;">
+  `;
+
+  const messageDiv = document.getElementById("message");
+  messageDiv.innerHTML = content;
+  messageDiv.classList.add("visible");
+
+  document.getElementById("emotionSelector").value = "";
+  document.getElementById("releaseText").value = "";
+});
