--- a/letting_go_ritual.html
+++ b/letting_go_ritual.html
@@ -129,3 +129,7 @@ index.html
   document.getElementById("emotionSelector").value = "";
   document.getElementById("releaseText").value = "";
 });
+ });
+  </script>
+</body>
+</html>
