--- a/index.html
+++ b/index.html
@@ -43,6 +43,45 @@
     <option>Fear</option>
     <option>Shame</option>
     <option>Guilt</option>
+    <option>Grief</option>
+<option>Sadness</option>
+<option>Anger</option>
+<option>Resentment</option>
+<option>Jealousy</option>
+<option>Envy</option>
+<option>Bitterness</option>
+<option>Regret</option>
+<option>Loneliness</option>
+<option>Hopelessness</option>
+<option>Helplessness</option>
+<option>Anxiety</option>
+<option>Dread</option>
+<option>Rejection</option>
+<option>Abandonment</option>
+<option>Unworthiness</option>
+<option>Self-hatred</option>
+<option>Emptiness</option>
+<option>Despair</option>
+<option>Insecurity</option>
+<option>Disappointment</option>
+<option>Frustration</option>
+<option>Overwhelm</option>
+<option>Powerlessness</option>
+<option>Embarrassment</option>
+<option>Distrust</option>
+<option>Loss</option>
+<option>Heartache</option>
+<option>Longing</option>
+<option>Disconnection</option>
+<option>Neglect</option>
+<option>Suppression</option>
+<option>Confusion</option>
+<option>Alienation</option>
+<option>Terror</option>
+<option>Failure</option>
+<option>Repression</option>
+<option>Desperation</option>
+<option>Resignation</option>
   </select>
 
   <textarea id="releaseText" placeholder="Write what you’d like to let go of today…"></textarea>
