--- a/index.html
+++ b/index.html
@@ -160,11 +160,12 @@
         content = `<p>This emotion is still being added. Try again soon!</p>`;
       }
  if (emotion === "Grief") {
-    content = 
+    <h2>...</h2>
+  ...
+;
       <h2>🖤 Emotion: Grief</h2>
-      <h3>🔍 What Is Grief?</h3>
-      <p>This is a placeholder description of grief — what it is, why we feel it, and where it shows up in our lives.</p>
-
+  <h3>🔍 What Is Grief?</h3>
+  <p>This is a placeholder description of grief...</p>
       <h3>🧠 What It Does in the Body</h3>
       <p>Grief can create physical and emotional patterns that keep us stuck in the past. Acknowledging it is the first step toward healing.</p>
 
