--- a/index.html
+++ b/index.html
@@ -210,29 +210,25 @@
   }
 
 
-  if (emotion === "Anger") {
-    content = 
-      <h2>🖤 Emotion: Anger</h2>
-      <h3>🔍 What Is Anger?</h3>
-      <p>This is a placeholder description of anger — what it is, why we feel it, and where it shows up in our lives.</p>
-
-      <h3>🧠 What It Does in the Body</h3>
-      <p>Anger can create physical and emotional patterns that keep us stuck in the past. Acknowledging it is the first step toward healing.</p>
-
-      <h3>🌬️ Why We Need to Release It</h3>
-      <p>You are safe now. You don’t need to carry anger any longer. Let it leave your body with your breath.</p>
-
-      <h3>🌿 Letting Go Ritual</h3>
-      <ul>
-        <li>Find stillness and take 3 deep breaths.</li>
-        <li>Say: “I release anger now. It no longer belongs to me.”</li>
-        <li>Place your hand on your heart and feel the release.</li>
-      </ul>
-
-      <h3>💫 Affirmation for Anger</h3>
-      <p><em>I am free from anger. I choose peace, power, and self-love.</em></p>
-    ;
-  }
+ if (emotion === "Anger") {
+  content = `
+    <h2>🖤 Emotion: Anger</h2>
+    <h3>🔍 What Is Anger?</h3>
+    <p>This is a placeholder description of anger — what it is, why we feel it, and where it shows up in our lives.</p>
+    <h3>🧠 What It Does in the Body</h3>
+    <p>Anger can create physical and emotional patterns that keep us stuck in the past. Acknowledging it is the first step toward healing.</p>
+    <h3>🌬️ Why We Need to Release It</h3>
+    <p>You are safe now. You don’t need to carry anger any longer. Let it leave your body with your breath.</p>
+    <h3>🌿 Letting Go Ritual</h3>
+    <ul>
+      <li>Find stillness and take 3 deep breaths.</li>
+      <li>Say: “I release anger now. It no longer belongs to me.”</li>
+      <li>Place your hand on your heart and feel the release.</li>
+    </ul>
+    <h3>💫 Affirmation for Anger</h3>
+    <p><em>I am free from anger. I choose peace, power, and self-love.</em></p>
+  `;
+}
 
 
   if (emotion === "Resentment") {
@@ -1134,7 +1130,9 @@
     ;
 }
 </script>
-      document.getElementById("message").innerHTML = content;
+document.getElementById("message").innerHTML = content;
+document.getElementById("emotionSelector").value = "";
+document.getElementById("releaseText").value = "";
     }
   </script>
 </body>
