--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
 
   if (emotion === "Sadness") {
-    content = 
+   Let content = 
       <h2>🖤 Emotion: Sadness</h2>
       <h3>🔍 What Is Sadness?</h3>
       <p>This is a placeholder description of sadness — what it is, why we feel it, and where it shows up in our lives.</p>
@@ -1130,7 +1130,6 @@
     ;
 }
 </script>
-document.getElementById("message").innerHTML = content;
 document.getElementById("emotionSelector").value = "";
 document.getElementById("releaseText").value = "";
     }
