--- a/index.html
+++ b/index.html
@@ -156,55 +156,50 @@
           <h4>💫 Affirmation</h4>
           <p><em>I release guilt and walk forward with compassion and grace.</em></p>
         `;
-      } else {
-        content = `<p>This emotion is still being added. Try again soon!</p>`;
-      }
- if (emotion === "Grief") {
-    <h2>...</h2>
-  ...
-;
-      <h2>🖤 Emotion: Grief</h2>
-  <h3>🔍 What Is Grief?</h3>
+      } else if (emotion === "Grief") {
+    content =
+      <h3>🖤 Emotion: Grief</h2>
+  <h4>🔍 What Is Grief?</h3>
   <p>This is a placeholder description of grief...</p>
-      <h3>🧠 What It Does in the Body</h3>
+      <h4>🧠 What It Does in the Body</h3>
       <p>Grief can create physical and emotional patterns that keep us stuck in the past. Acknowledging it is the first step toward healing.</p>
 
-      <h3>🌬️ Why We Need to Release It</h3>
+      <h4>🌬️ Why We Need to Release It</h3>
       <p>You are safe now. You don’t need to carry grief any longer. Let it leave your body with your breath.</p>
 
-      <h3>🌿 Letting Go Ritual</h3>
+      <h4>🌿 Letting Go Ritual</h3>
       <ul>
         <li>Find stillness and take 3 deep breaths.</li>
         <li>Say: “I release grief now. It no longer belongs to me.”</li>
         <li>Place your hand on your heart and feel the release.</li>
       </ul>
 
-      <h3>💫 Affirmation for Grief</h3>
+      <h4>💫 Affirmation for Grief</h3>
       <p><em>I am free from grief. I choose peace, power, and self-love.</em></p>
     ;
   }
 
 
   if (emotion === "Sadness") {
-   Let content = 
-      <h2>🖤 Emotion: Sadness</h2>
-      <h3>🔍 What Is Sadness?</h3>
+    content = 
+      <h3>🖤 Emotion: Sadness</h2>
+      <h4>🔍 What Is Sadness?</h3>
       <p>This is a placeholder description of sadness — what it is, why we feel it, and where it shows up in our lives.</p>
 
-      <h3>🧠 What It Does in the Body</h3>
+      <h4>🧠 What It Does in the Body</h3>
       <p>Sadness can create physical and emotional patterns that keep us stuck in the past. Acknowledging it is the first step toward healing.</p>
 
-      <h3>🌬️ Why We Need to Release It</h3>
+      <h4>🌬️ Why We Need to Release It</h3>
       <p>You are safe now. You don’t need to carry sadness any longer. Let it leave your body with your breath.</p>
 
-      <h3>🌿 Letting Go Ritual</h3>
+      <h4>🌿 Letting Go Ritual</h3>
       <ul>
         <li>Find stillness and take 3 deep breaths.</li>
         <li>Say: “I release sadness now. It no longer belongs to me.”</li>
         <li>Place your hand on your heart and feel the release.</li>
       </ul>
 
-      <h3>💫 Affirmation for Sadness</h3>
+      <h4>💫 Affirmation for Sadness</h3>
       <p><em>I am free from sadness. I choose peace, power, and self-love.</em></p>
     ;
   }
@@ -212,20 +207,20 @@
 
  if (emotion === "Anger") {
   content = `
-    <h2>🖤 Emotion: Anger</h2>
-    <h3>🔍 What Is Anger?</h3>
+    <h3>🖤 Emotion: Anger</h2>
+    <h4>🔍 What Is Anger?</h3>
     <p>This is a placeholder description of anger — what it is, why we feel it, and where it shows up in our lives.</p>
-    <h3>🧠 What It Does in the Body</h3>
+    <h4>🧠 What It Does in the Body</h3>
     <p>Anger can create physical and emotional patterns that keep us stuck in the past. Acknowledging it is the first step toward healing.</p>
-    <h3>🌬️ Why We Need to Release It</h3>
+    <h4>🌬️ Why We Need to Release It</h3>
     <p>You are safe now. You don’t need to carry anger any longer. Let it leave your body with your breath.</p>
-    <h3>🌿 Letting Go Ritual</h3>
+    <h4>🌿 Letting Go Ritual</h3>
     <ul>
       <li>Find stillness and take 3 deep breaths.</li>
       <li>Say: “I release anger now. It no longer belongs to me.”</li>
       <li>Place your hand on your heart and feel the release.</li>
     </ul>
-    <h3>💫 Affirmation for Anger</h3>
+    <h4>💫 Affirmation for Anger</h3>
     <p><em>I am free from anger. I choose peace, power, and self-love.</em></p>
   `;
 }
@@ -233,24 +228,24 @@
 
   if (emotion === "Resentment") {
     content = 
-      <h2>🖤 Emotion: Resentment</h2>
-      <h3>🔍 What Is Resentment?</h3>
+      <h3>🖤 Emotion: Resentment</h2>
+      <h4>🔍 What Is Resentment?</h3>
       <p>This is a placeholder description of resentment — what it is, why we feel it, and where it shows up in our lives.</p>
 
-      <h3>🧠 What It Does in the Body</h3>
+      <h4>🧠 What It Does in the Body</h3>
       <p>Resentment can create physical and emotional patterns that keep us stuck in the past. Acknowledging it is the first step toward healing.</p>
 
-      <h3>🌬️ Why We Need to Release It</h3>
+      <h4>🌬️ Why We Need to Release It</h3>
       <p>You are safe now. You don’t need to carry resentment any longer. Let it leave your body with your breath.</p>
 
-      <h3>🌿 Letting Go Ritual</h3>
+      <h4>🌿 Letting Go Ritual</h3>
       <ul>
         <li>Find stillness and take 3 deep breaths.</li>
         <li>Say: “I release resentment now. It no longer belongs to me.”</li>
         <li>Place your hand on your heart and feel the release.</li>
       </ul>
 
-      <h3>💫 Affirmation for Resentment</h3>
+      <h4>💫 Affirmation for Resentment</h3>
       <p><em>I am free from resentment. I choose peace, power, and self-love.</em></p>
     ;
   }
@@ -258,24 +253,24 @@
 
   if (emotion === "Jealousy") {
     content = 
-      <h2>🖤 Emotion: Jealousy</h2>
-      <h3>🔍 What Is Jealousy?</h3>
+      <h3>🖤 Emotion: Jealousy</h2>
+      <h4>🔍 What Is Jealousy?</h3>
       <p>This is a placeholder description of jealousy — what it is, why we feel it, and where it shows up in our lives.</p>
 
-      <h3>🧠 What It Does in the Body</h3>
+      <h4>🧠 What It Does in the Body</h3>
       <p>Jealousy can create physical and emotional patterns that keep us stuck in the past. Acknowledging it is the first step toward healing.</p>
 
-      <h3>🌬️ Why We Need to Release It</h3>
+      <h4>🌬️ Why We Need to Release It</h3>
       <p>You are safe now. You don’t need to carry jealousy any longer. Let it leave your body with your breath.</p>
 
-      <h3>🌿 Letting Go Ritual</h3>
+      <h4>🌿 Letting Go Ritual</h3>
       <ul>
         <li>Find stillness and take 3 deep breaths.</li>
         <li>Say: “I release jealousy now. It no longer belongs to me.”</li>
         <li>Place your hand on your heart and feel the release.</li>
       </ul>
 
-      <h3>💫 Affirmation for Jealousy</h3>
+      <h4>💫 Affirmation for Jealousy</h3>
       <p><em>I am free from jealousy. I choose peace, power, and self-love.</em></p>
     ;
   }
@@ -283,24 +278,24 @@
 
   if (emotion === "Envy") {
     content = 
-      <h2>🖤 Emotion: Envy</h2>
-      <h3>🔍 What Is Envy?</h3>
+      <h3>🖤 Emotion: Envy</h2>
+      <h4>🔍 What Is Envy?</h3>
       <p>This is a placeholder description of envy — what it is, why we feel it, and where it shows up in our lives.</p>
 
-      <h3>🧠 What It Does in the Body</h3>
+      <h4>🧠 What It Does in the Body</h3>
       <p>Envy can create physical and emotional patterns that keep us stuck in the past. Acknowledging it is the first step toward healing.</p>
 
-      <h3>🌬️ Why We Need to Release It</h3>
+      <h4>🌬️ Why We Need to Release It</h3>
       <p>You are safe now. You don’t need to carry envy any longer. Let it leave your body with your breath.</p>
 
-      <h3>🌿 Letting Go Ritual</h3>
+      <h4>🌿 Letting Go Ritual</h3>
       <ul>
         <li>Find stillness and take 3 deep breaths.</li>
         <li>Say: “I release envy now. It no longer belongs to me.”</li>
         <li>Place your hand on your heart and feel the release.</li>
       </ul>
 
-      <h3>💫 Affirmation for Envy</h3>
+      <h4>💫 Affirmation for Envy</h3>
       <p><em>I am free from envy. I choose peace, power, and self-love.</em></p>
     ;
   }
@@ -308,24 +303,24 @@
 
   if (emotion === "Bitterness") {
     content = 
-      <h2>🖤 Emotion: Bitterness</h2>
-      <h3>🔍 What Is Bitterness?</h3>
+      <h3>🖤 Emotion: Bitterness</h2>
+      <h4>🔍 What Is Bitterness?</h3>
       <p>This is a placeholder description of bitterness — what it is, why we feel it, and where it shows up in our lives.</p>
 
-      <h3>🧠 What It Does in the Body</h3>
+      <h4>🧠 What It Does in the Body</h3>
       <p>Bitterness can create physical and emotional patterns that keep us stuck in the past. Acknowledging it is the first step toward healing.</p>
 
-      <h3>🌬️ Why We Need to Release It</h3>
+      <h4>🌬️ Why We Need to Release It</h3>
       <p>You are safe now. You don’t need to carry bitterness any longer. Let it leave your body with your breath.</p>
 
-      <h3>🌿 Letting Go Ritual</h3>
+      <h4>🌿 Letting Go Ritual</h3>
       <ul>
         <li>Find stillness and take 3 deep breaths.</li>
         <li>Say: “I release bitterness now. It no longer belongs to me.”</li>
         <li>Place your hand on your heart and feel the release.</li>
       </ul>
 
-      <h3>💫 Affirmation for Bitterness</h3>
+      <h4>💫 Affirmation for Bitterness</h3>
       <p><em>I am free from bitterness. I choose peace, power, and self-love.</em></p>
     ;
   }
@@ -333,24 +328,24 @@
 
   if (emotion === "Regret") {
     content = 
-      <h2>🖤 Emotion: Regret</h2>
-      <h3>🔍 What Is Regret?</h3>
+      <h3>🖤 Emotion: Regret</h2>
+      <h4>🔍 What Is Regret?</h3>
       <p>This is a placeholder description of regret — what it is, why we feel it, and where it shows up in our lives.</p>
 
-      <h3>🧠 What It Does in the Body</h3>
+      <h4>🧠 What It Does in the Body</h3>
       <p>Regret can create physical and emotional patterns that keep us stuck in the past. Acknowledging it is the first step toward healing.</p>
 
-      <h3>🌬️ Why We Need to Release It</h3>
+      <h4>🌬️ Why We Need to Release It</h3>
       <p>You are safe now. You don’t need to carry regret any longer. Let it leave your body with your breath.</p>
 
-      <h3>🌿 Letting Go Ritual</h3>
+      <h4>🌿 Letting Go Ritual</h3>
       <ul>
         <li>Find stillness and take 3 deep breaths.</li>
         <li>Say: “I release regret now. It no longer belongs to me.”</li>
         <li>Place your hand on your heart and feel the release.</li>
       </ul>
 
-      <h3>💫 Affirmation for Regret</h3>
+      <h4>💫 Affirmation for Regret</h3>
       <p><em>I am free from regret. I choose peace, power, and self-love.</em></p>
     ;
   }
@@ -358,24 +353,24 @@
 
   if (emotion === "Loneliness") {
     content = 
-      <h2>🖤 Emotion: Loneliness</h2>
-      <h3>🔍 What Is Loneliness?</h3>
+      <h3>🖤 Emotion: Loneliness</h2>
+      <h4>🔍 What Is Loneliness?</h3>
       <p>This is a placeholder description of loneliness — what it is, why we feel it, and where it shows up in our lives.</p>
 
-      <h3>🧠 What It Does in the Body</h3>
+      <h4>🧠 What It Does in the Body</h3>
       <p>Loneliness can create physical and emotional patterns that keep us stuck in the past. Acknowledging it is the first step toward healing.</p>
 
-      <h3>🌬️ Why We Need to Release It</h3>
+      <h4>🌬️ Why We Need to Release It</h3>
       <p>You are safe now. You don’t need to carry loneliness any longer. Let it leave your body with your breath.</p>
 
-      <h3>🌿 Letting Go Ritual</h3>
+      <h4>🌿 Letting Go Ritual</h3>
       <ul>
         <li>Find stillness and take 3 deep breaths.</li>
         <li>Say: “I release loneliness now. It no longer belongs to me.”</li>
         <li>Place your hand on your heart and feel the release.</li>
       </ul>
 
-      <h3>💫 Affirmation for Loneliness</h3>
+      <h4>💫 Affirmation for Loneliness</h3>
       <p><em>I am free from loneliness. I choose peace, power, and self-love.</em></p>
     ;
   }
@@ -383,24 +378,24 @@
 
   if (emotion === "Hopelessness") {
     content = 
-      <h2>🖤 Emotion: Hopelessness</h2>
-      <h3>🔍 What Is Hopelessness?</h3>
+      <h3>🖤 Emotion: Hopelessness</h2>
+      <h4>🔍 What Is Hopelessness?</h3>
       <p>This is a placeholder description of hopelessness — what it is, why we feel it, and where it shows up in our lives.</p>
 
-      <h3>🧠 What It Does in the Body</h3>
+      <h4>🧠 What It Does in the Body</h3>
       <p>Hopelessness can create physical and emotional patterns that keep us stuck in the past. Acknowledging it is the first step toward healing.</p>
 
-      <h3>🌬️ Why We Need to Release It</h3>
+      <h4>🌬️ Why We Need to Release It</h3>
       <p>You are safe now. You don’t need to carry hopelessness any longer. Let it leave your body with your breath.</p>
 
-      <h3>🌿 Letting Go Ritual</h3>
+      <h4>🌿 Letting Go Ritual</h3>
       <ul>
         <li>Find stillness and take 3 deep breaths.</li>
         <li>Say: “I release hopelessness now. It no longer belongs to me.”</li>
         <li>Place your hand on your heart and feel the release.</li>
       </ul>
 
-      <h3>💫 Affirmation for Hopelessness</h3>
+      <h4>💫 Affirmation for Hopelessness</h3>
       <p><em>I am free from hopelessness. I choose peace, power, and self-love.</em></p>
     ;
   }
@@ -408,24 +403,24 @@
 
   if (emotion === "Helplessness") {
     content = 
-      <h2>🖤 Emotion: Helplessness</h2>
-      <h3>🔍 What Is Helplessness?</h3>
+      <h3>🖤 Emotion: Helplessness</h2>
+      <h4>🔍 What Is Helplessness?</h3>
       <p>This is a placeholder description of helplessness — what it is, why we feel it, and where it shows up in our lives.</p>
 
-      <h3>🧠 What It Does in the Body</h3>
+      <h4>🧠 What It Does in the Body</h3>
       <p>Helplessness can create physical and emotional patterns that keep us stuck in the past. Acknowledging it is the first step toward healing.</p>
 
-      <h3>🌬️ Why We Need to Release It</h3>
+      <h4>🌬️ Why We Need to Release It</h3>
       <p>You are safe now. You don’t need to carry helplessness any longer. Let it leave your body with your breath.</p>
 
-      <h3>🌿 Letting Go Ritual</h3>
+      <h4>🌿 Letting Go Ritual</h3>
       <ul>
         <li>Find stillness and take 3 deep breaths.</li>
         <li>Say: “I release helplessness now. It no longer belongs to me.”</li>
         <li>Place your hand on your heart and feel the release.</li>
       </ul>
 
-      <h3>💫 Affirmation for Helplessness</h3>
+      <h4>💫 Affirmation for Helplessness</h3>
       <p><em>I am free from helplessness. I choose peace, power, and self-love.</em></p>
     ;
   }
@@ -433,24 +428,24 @@
 
   if (emotion === "Anxiety") {
     content = 
-      <h2>🖤 Emotion: Anxiety</h2>
-      <h3>🔍 What Is Anxiety?</h3>
+      <h3>🖤 Emotion: Anxiety</h2>
+      <h4>🔍 What Is Anxiety?</h3>
       <p>This is a placeholder description of anxiety — what it is, why we feel it, and where it shows up in our lives.</p>
 
-      <h3>🧠 What It Does in the Body</h3>
+      <h4>🧠 What It Does in the Body</h3>
       <p>Anxiety can create physical and emotional patterns that keep us stuck in the past. Acknowledging it is the first step toward healing.</p>
 
-      <h3>🌬️ Why We Need to Release It</h3>
+      <h4>🌬️ Why We Need to Release It</h3>
       <p>You are safe now. You don’t need to carry anxiety any longer. Let it leave your body with your breath.</p>
 
-      <h3>🌿 Letting Go Ritual</h3>
+      <h4>🌿 Letting Go Ritual</h3>
       <ul>
         <li>Find stillness and take 3 deep breaths.</li>
         <li>Say: “I release anxiety now. It no longer belongs to me.”</li>
         <li>Place your hand on your heart and feel the release.</li>
       </ul>
 
-      <h3>💫 Affirmation for Anxiety</h3>
+      <h4>💫 Affirmation for Anxiety</h3>
       <p><em>I am free from anxiety. I choose peace, power, and self-love.</em></p>
     ;
   }
@@ -458,24 +453,24 @@
 
   if (emotion === "Dread") {
     content = 
-      <h2>🖤 Emotion: Dread</h2>
-      <h3>🔍 What Is Dread?</h3>
+      <h3>🖤 Emotion: Dread</h2>
+      <h4>🔍 What Is Dread?</h3>
       <p>This is a placeholder description of dread — what it is, why we feel it, and where it shows up in our lives.</p>
 
-      <h3>🧠 What It Does in the Body</h3>
+      <h4>🧠 What It Does in the Body</h3>
       <p>Dread can create physical and emotional patterns that keep us stuck in the past. Acknowledging it is the first step toward healing.</p>
 
       <h3>🌬️ Why We Need to Release It</h3>
       <p>You are safe now. You don’t need to carry dread any longer. Let it leave your body with your breath.</p>
 
-      <h3>🌿 Letting Go Ritual</h3>
+      <h4>🌿 Letting Go Ritual</h3>
       <ul>
         <li>Find stillness and take 3 deep breaths.</li>
         <li>Say: “I release dread now. It no longer belongs to me.”</li>
         <li>Place your hand on your heart and feel the release.</li>
       </ul>
 
-      <h3>💫 Affirmation for Dread</h3>
+      <h4>💫 Affirmation for Dread</h3>
       <p><em>I am free from dread. I choose peace, power, and self-love.</em></p>
     ;
   }
@@ -483,24 +478,24 @@
 
   if (emotion === "Rejection") {
     content = 
-      <h2>🖤 Emotion: Rejection</h2>
+      <h3>🖤 Emotion: Rejection</h2>
       <h3>🔍 What Is Rejection?</h3>
       <p>This is a placeholder description of rejection — what it is, why we feel it, and where it shows up in our lives.</p>
 
-      <h3>🧠 What It Does in the Body</h3>
+      <h4>🧠 What It Does in the Body</h3>
       <p>Rejection can create physical and emotional patterns that keep us stuck in the past. Acknowledging it is the first step toward healing.</p>
 
-      <h3>🌬️ Why We Need to Release It</h3>
+      <h4>🌬️ Why We Need to Release It</h3>
       <p>You are safe now. You don’t need to carry rejection any longer. Let it leave your body with your breath.</p>
 
-      <h3>🌿 Letting Go Ritual</h3>
+      <h4>🌿 Letting Go Ritual</h3>
       <ul>
         <li>Find stillness and take 3 deep breaths.</li>
         <li>Say: “I release rejection now. It no longer belongs to me.”</li>
         <li>Place your hand on your heart and feel the release.</li>
       </ul>
 
-      <h3>💫 Affirmation for Rejection</h3>
+      <h4>💫 Affirmation for Rejection</h3>
       <p><em>I am free from rejection. I choose peace, power, and self-love.</em></p>
     ;
   }
@@ -508,24 +503,24 @@
 
   if (emotion === "Abandonment") {
     content = 
-      <h2>🖤 Emotion: Abandonment</h2>
-      <h3>🔍 What Is Abandonment?</h3>
+      <h3>🖤 Emotion: Abandonment</h2>
+      <h4>🔍 What Is Abandonment?</h3>
       <p>This is a placeholder description of abandonment — what it is, why we feel it, and where it shows up in our lives.</p>
 
-      <h3>🧠 What It Does in the Body</h3>
+      <h4>🧠 What It Does in the Body</h3>
       <p>Abandonment can create physical and emotional patterns that keep us stuck in the past. Acknowledging it is the first step toward healing.</p>
 
-      <h3>🌬️ Why We Need to Release It</h3>
+      <h4>🌬️ Why We Need to Release It</h3>
       <p>You are safe now. You don’t need to carry abandonment any longer. Let it leave your body with your breath.</p>
 
-      <h3>🌿 Letting Go Ritual</h3>
+      <h4>🌿 Letting Go Ritual</h3>
       <ul>
         <li>Find stillness and take 3 deep breaths.</li>
         <li>Say: “I release abandonment now. It no longer belongs to me.”</li>
         <li>Place your hand on your heart and feel the release.</li>
       </ul>
 
-      <h3>💫 Affirmation for Abandonment</h3>
+      <h4>💫 Affirmation for Abandonment</h3>
       <p><em>I am free from abandonment. I choose peace, power, and self-love.</em></p>
     ;
   }
@@ -1130,6 +1125,9 @@
     ;
 }
 </script>
+  const message = document.getElementById("message");
+message.innerHTML = content;
+message.classList.add("visible");
 document.getElementById("emotionSelector").value = "";
 document.getElementById("releaseText").value = "";
     }
