--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         content = `
           <H3>🖤 Emotion: Fear</H3>
           <h4>🔍 What Is Fear?</h4>
-          <p>Fear is a natural emotional response to danger or uncertainty. In modern life, it often arises from imagined threats or past wounds.</p>
+         <p>You wrote: <em>${journal}</em></p>
 
           <h4>🧠 In the Body</h4>
           <p>Fear activates your fight-or-flight system. It tenses muscles, increases heart rate, and clouds your thinking.</p>
